[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/sliiiiizzze.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.952941, 0.992157, 0.960784, 1 )

[sub_resource type="BoxShape" id=3]

[node name="sliiiiizzze" type="Area"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 1 )
slowpercent = 0.1

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 0.1, 0, 0, 0, 2, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
shape = SubResource( 3 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="body_entered" from="." to="." method="_on_sliiiiizzze_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_sliiiiizzze_body_exited"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
